--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,23 @@
 
 /* Your CSS Code here. */
+
+section{
+	margin-left: auto;
+	margin-right: auto;
+	width: 50%;
+}
+.moviePic {
+	margin-left:auto;
+	margin-right:auto;
+	width:50%;
+	opacity: 80%;
+}
+.movieDetail {
+	postion: center;
+	top: ;
+	width: 40%;
+	text-align: center;
+	font-size:20;
+	
+	
+}
